fix overlapped buttons (bug 912056)

--- a/hearth/media/css/ratings.styl
+++ b/hearth/media/css/ratings.styl
@@ -147,7 +147,7 @@ select[name=rating] {
         right: 0;
         text-align: right;
         top: -40px;
-        z-index: 20;
+        z-index: 19;
     }
 }
 
